# Raytracer

./: .gitignore  CMakeLists.txt  Main.cpp  Makefile  Point3D.cpp  Point3D.hpp  Ray.cpp  Ray.hpp  Rectangle3D.cpp  Sphere.cpp  Sphere.hpp  Vector3D.cpp  Vector3D.hpp  main.cpp  oui.ppm
Abstract/: AShape.hpp
Config/: LibConfig.hpp
Factory/: Factory.hpp
Interface/: IShape.hpp
Scene/: Scene1
Usage/: Usage.cpp  Usage.hpp
doc/: .gitignore  Makefile
doc/src/: documentation.tex
lib/: .gitkeep
plugins/: .gitkeep
scenes/: scene.cfg  sceneFinal.cfg  scenePerlin.cfg  sceneTuto.cfg  sceneTuto2.cfg  sceneTutoSFML.cfg  scene_d_i_c_k.cfg  scene_tuto.cfg
screenshots/: .gitkeep  DiffuseLightMaterial.ppm  EndTuto.ppm  ImageDoubleCircleRedBlue.ppm  MidTuto.ppm
src/: Camera.cpp  Camera.hpp  Color.hpp  HittableList.hpp  Main.cpp  Material.hpp  Point3D.cpp  Point3D.hpp  Ray.cpp  Ray.hpp  Rectangle3D.cpp  Rectangle3D.hpp  Vector3D.cpp  Vector3D.hpp  hittable_list.hpp  rtweekend.hpp  struct.hpp
src/Abstract/: ADisplay.cpp  ADisplay.hpp  ALight.cpp  ALight.hpp  AMaterial.cpp  AMaterial.hpp  APrimitive.cpp  APrimitive.hpp  AShape.cpp  AShape.hpp  AThread.cpp  AThread.hpp
src/Config/: LibConfig.cpp  LibConfig.hpp
src/Core/: Core.cpp  Core.hpp
src/Exception/: FactoryException.hpp  Library.hpp
src/Exception/Usage/: Usage.cpp  Usage.hpp
src/Factory/: Factory.hpp  NewFactory.hpp
src/Interface/: IDisplay.hpp  ILight.hpp  IMaterial.hpp  IPrimitive.hpp  IShape.hpp  ITexture.hpp  IThread.hpp  Struct.hpp
src/Libraries/Graphical/SFML/: SFML.cpp  SFML.hpp
src/Lights/: Ambient.cpp  Ambient.hpp  Directional.cpp  Directional.hpp  Point.cpp  Point.hpp
src/Materials/: Dielectric.cpp  Dielectric.hpp  DiffuseLight.cpp  DiffuseLight.hpp  Lambertian.cpp  Lambertian.hpp  Metal.cpp  Metal.hpp
src/Math/: AxisAlignement.hpp  Math.cpp  Math.hpp
src/Primitives/: Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Plane.cpp  Plane.hpp  Rectangle.cpp  Rectangle.hpp  Sphere.cpp  Sphere.hpp
src/Texture/: CheckerTexture.cpp  CheckerTexture.hpp  NoiseTexture.cpp  NoiseTexture.hpp  SolidColorTexture.cpp  SolidColorTexture.hpp
src/Texture/Perlin/: Perlin.cpp  Perlin.hpp
src/Thread/: IThread.cpp  IThread.hpp
src/Wrapper/: Wrapper.cpp  Wrapper.hpp
